force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <label>Room</label>
    <nameField>
        <displayFormat>Room-{0000}</displayFormat>
        <label>Room Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>