force-app/main/default/objects/Room__c/fields/Age_of_children__c.field-meta.xml
<CustomField>
    <fullName>Age_of_children__c</fullName>
    <label>Age of children</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>