force-app/main/default/objects/Room__c/fields/Bed_Choice__c.field-meta.xml
<CustomField>
    <fullName>Bed_Choice__c</fullName>
    <label>Bed Choice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>