force-app/main/default/objects/Room__c/fields/Bed_Type__c.field-meta.xml
<CustomField>
    <fullName>Bed_Type__c</fullName>
    <label>Bed Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>