force-app/main/default/objects/Room__c/fields/Booking_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Hotel__c</fullName>
    <label>Booking Hotel</label>
    <referenceTo>Booking_Hotel__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>