force-app/main/default/objects/Room__c/fields/Booking_Hotel_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Hotel_Status__c</fullName>
    <formula>IF(ISPICKVAL(Booking_Hotel__r.Status__c,&apos;Cancelled&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Hotel Status</label>
    <type>Checkbox</type>
</CustomField>