force-app/main/default/objects/Room__c/fields/Cancellation_Amount_Room__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Amount_Room__c</fullName>
    <label>Cancellation Amount Room</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>