force-app/main/default/objects/Room__c/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <description>Basic information of selected option cancellation policy</description>
    <label>Cancellation Policy</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>