force-app/main/default/objects/Room__c/fields/Cancellation_Refund__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation/Refund</label>
    <referenceTo>Cancellation_Refund_POE__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>