force-app/main/default/objects/Room__c/fields/Expedia_Confirmation_Id__c.field-meta.xml
<CustomField>
    <fullName>Expedia_Confirmation_Id__c</fullName>
    <label>Expedia Confirmation Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>