force-app/main/default/objects/Room__c/fields/Extra_guest_price__c.field-meta.xml
<CustomField>
    <fullName>Extra_guest_price__c</fullName>
    <description>If room is charged for extra room</description>
    <label>Extra guest price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>