force-app/main/default/objects/Room__c/fields/Kitchen_Available__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kitchen Available</label>
    <type>Checkbox</type>
</CustomField>