force-app/main/default/objects/Room__c/fields/Local_Tax__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax__c</fullName>
    <label>Property Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>