force-app/main/default/objects/Room__c/fields/Merchant_Cost__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Cost__c</fullName>
    <label>Tripadeal Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>