force-app/main/default/objects/Room__c/fields/Merchant_Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Gross_Cost__c</fullName>
    <formula>Total_Room_Cost__c -  Merchant_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Gross Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>