force-app/main/default/objects/Room__c/fields/Modification_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Modification_in_Progress__c</fullName>
    <formula>Booking_Hotel__r.Modification_in_Progress__c</formula>
    <label>Modification in Progress?</label>
    <type>Checkbox</type>
</CustomField>