force-app/main/default/objects/Room__c/fields/Number_Of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Nights__c</fullName>
    <label>Number Of Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>