force-app/main/default/objects/Room__c/fields/Original_Room_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Room_Price__c</fullName>
    <label>Original Room Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>