force-app/main/default/objects/Room__c/fields/Original_Tax_Fees__c.field-meta.xml
<CustomField>
    <fullName>Original_Tax_Fees__c</fullName>
    <label>Original Tax &amp; Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>