force-app/main/default/objects/Room__c/fields/Original_Total_Room_Cost__c.field-meta.xml
<CustomField>
    <fullName>Original_Total_Room_Cost__c</fullName>
    <label>Original Total Room Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>