force-app/main/default/objects/Room__c/fields/Pax_Qty__c.field-meta.xml
<CustomField>
    <fullName>Pax_Qty__c</fullName>
    <label>Total Passenger Travelling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>