force-app/main/default/objects/Room__c/fields/Private_bathroom__c.field-meta.xml
<CustomField>
    <fullName>Private_bathroom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private bathroom</label>
    <type>Checkbox</type>
</CustomField>