force-app/main/default/objects/Room__c/fields/Property_Confirmation_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Confirmation_Id__c</fullName>
    <label>Property Confirmation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>