force-app/main/default/objects/Room__c/fields/Refunded_Merchant_Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Merchant_Gross_Cost__c</fullName>
    <label>Refunded Merchant Gross Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>