force-app/main/default/objects/Room__c/fields/Reverse_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Cancellation__c</fullName>
    <formula>100 - Cancellation__c</formula>
    <label>Reverse Cancellation %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>