force-app/main/default/objects/Room__c/fields/Room_Option__c.field-meta.xml
<CustomField>
    <fullName>Room_Option__c</fullName>
    <description>Contains info about option bought</description>
    <label>Room Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>