force-app/main/default/objects/Room__c/fields/Room_Price__c.field-meta.xml
<CustomField>
    <fullName>Room_Price__c</fullName>
    <description>Default room price</description>
    <label>Room Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>