force-app/main/default/objects/Room__c/fields/Room_QTY__c.field-meta.xml
<CustomField>
    <fullName>Room_QTY__c</fullName>
    <label>Rooms Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>