force-app/main/default/objects/Room__c/fields/Room_Rating__c.field-meta.xml
<CustomField>
    <fullName>Room_Rating__c</fullName>
    <label>Room Rating</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>