force-app/main/default/objects/Room__c/fields/Room_Title__c.field-meta.xml
<CustomField>
    <fullName>Room_Title__c</fullName>
    <label>Room Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>