force-app/main/default/objects/Room__c/fields/Total_Room_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Room_Cost__c</fullName>
    <formula>Room_Price__c + Taxes__c + Extra_guest_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Room Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>