force-app/main/default/objects/Room__c/fields/Wifi_Available__c.field-meta.xml
<CustomField>
    <fullName>Wifi_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wifi Available</label>
    <type>Checkbox</type>
</CustomField>